tests/cases/traits/errors/trait-bound-missing-impl.ari
trait NeedsScore {
  fn score(self) -> i64
}

fn use_score[T: NeedsScore](value: T) -> i64 {
  return value.score();
}

fn main() -> i64 {
  return use_score<i64>(4);
}
